--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,11 @@ footer{
     color: white;
     height: 70px;
     text-align: center;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin-bottom: 0px;
 }
 /*footer*/
 /*cards home*/
