--- a/css/style.css
+++ b/css/style.css
@@ -85,11 +85,11 @@ body{
     background-color: whitesmoke;
     color: rgb(0, 70, 70);
     text-align: center;
-/*     font-family: Verdana, Geneva, Tahoma, sans-serif; */
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
     /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 
-    font-family: 'Montserrat', sans-serif;
+    /* font-family: 'Montserrat', sans-serif; */
 }
 /*body*/
 /*footer*/
@@ -105,6 +105,17 @@ footer{
     margin-bottom: 0px;
 }
 /*footer*/
+/*login*/
+.divLogin select{
+    margin: 10px;
+    border: none;
+    color: rgb(0, 70, 70);
+    font-size: 16px;
+}
+.divLogin select:focus{
+    outline: none;
+}
+/*login*/
 /*cards home*/
 .cardsHome{
     background-color: white;
