--- a/css/style.css
+++ b/css/style.css
@@ -3,57 +3,12 @@
     margin: 0;
 }
 
-/*login*/
-#caixaLogin{
-    position: relative;
-    border: solid 3px rgb(0, 70, 70);
-    border-left: solid 10px rgb(0, 70, 70);
-    border-radius: 10px;
-    width: 50%;
-    margin: auto;
-    transform: translateY(200px);
-}
-#caixaLogin div{
-    display: inline-block;
-}
-.divLogin{
-    width: 300px;
-    font-size: 22px;
-    margin-bottom: 5px;
-}
-.divLogin input{
-    margin: 5px;
-    width: 250px;
-    height: 30px;
-    border: none;
-    border-bottom: solid 1px rgb(0, 70, 70);
-    background-color: whitesmoke;
-    outline: none;
-}
-.divLogin input[type=submit]{
-    background-color: rgb(0, 70, 70);
-    border: none;
-    color: white;
-}
-.divLogin input[type=submit]:hover{
-    background-color: rgb(0, 48, 48);
-}
-.divLogin a{
-    color: rgb(0, 70, 70);
-    font-size: 14px;
-}
-.divLogin a:hover{
-    color: rgb(0, 48, 48);
-    font-size: 14px;
-}
-/*login*/
-
 /*navbar*/
 header{
     padding-bottom: 50px;
 }
 nav{
-    background-color: rgb(0, 70, 70);
+    background-image: linear-gradient(to bottom, #0478D9, #4e9ddd);
     color: white;
     height: 50px;
     font-size: 26px;
@@ -83,20 +38,16 @@ a:hover{
 /*body*/
 body{
     background-color: whitesmoke;
-    color: rgb(0, 70, 70);
+    color: #0478D9;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-/* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-    /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
-
-    /* font-family: 'Montserrat', sans-serif; */
 }
 /*body*/
 /*footer*/
 footer{
-    background-color: rgb(0, 70, 70);
+    background-image: linear-gradient(to bottom, #4e9ddd, #0478D9);
     color: white;
-    height: 70px;
+    height: 50px;
     text-align: center;
     position: fixed;
     bottom: 0px;
@@ -106,10 +57,24 @@ footer{
 }
 /*footer*/
 /*login*/
+#divLogin{
+    border: #0478D9 solid 10px;
+    border-style: none none none solid;
+    border-radius: 20px;
+    background-color: white;
+    margin-top: 100px;
+}
+.inputLogin{
+    border-style: none none solid none;
+}
+.inputLogin:focus{
+    box-shadow: none;
+    outline: none;
+}
 .divLogin select{
     margin: 10px;
     border: none;
-    color: rgb(0, 70, 70);
+    color: #0478D9;
     font-size: 16px;
 }
 .divLogin select:focus{
@@ -120,9 +85,9 @@ footer{
 .cardsHome{
     background-color: white;
     width: 300px;
-    border: solid 3px rgb(0, 70, 70);
-    border-bottom: solid 10px rgb(0, 70, 70);;
-    color: rgb(0, 70, 70);;
+    border: solid 3px #0478D9;
+    border-bottom: solid 10px #0478D9;
+    color: #0478D9;
     border-radius: 10px;
     text-align: center;
     display: inline-block;
@@ -132,19 +97,19 @@ footer{
 /*consulta alunos*/
 #botaoAdd{
     margin-top: 50px;
-    border: solid 2px rgb(0, 70, 70);
+    border: solid 2px #0478D9;
     border-radius: 10px;
 }
 #listaAlunos{
     margin: auto;
     text-align: center;
-    border: solid 1px black;
+    border: solid 1px #0478D9;
     font-size: 18px;
     padding: 1px;
     margin-bottom: 20px;
 }
 #listaAlunos td{
-    border: solid 1px black;
+    border: solid 1px #0478D9;
 }
 #listaAlunos a{
     color: rgb(0, 70, 70);
