--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,9 @@ footer {
 /*login*/
 /*cards home*/
 .divHome{
-  transform: translateY(50%);
-  background-color: white !important;
+  position: relative;
+  top: 50%;
+  transform: translateY(-100%);
   border-radius: 10px;
   width: 90%;
   margin: auto;
@@ -104,6 +105,8 @@ footer {
   color: white;
   text-align: center;
   display: inline-block;
+  font-size: 20px;
+  padding: 5px;
 }
 .cardsHome td{
   color: white;
