--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,17 @@ nav{
   background-image: url(
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(255, 255, 255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
+.navbar ul li .trocaTema:focus{
+  box-shadow: none;
+  outline: none;
+}
+.dropdown-menu{
+  width: 200px;
+  text-align: center;
+}
+.navbar ul li .trocaTema{
+  margin-top: 10px;
+}
 /*navbar*/
 /*body*/
 body{
