Adicionado logo na tela login + ajustes na tela home

--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ footer {
 }
 .cardsHome {
   background-color: #4291d1;
-  width: 350px;
+  width: 90%;
   color: white;
   text-align: center;
   display: inline-block;
