--- a/css/style.css
+++ b/css/style.css
@@ -103,14 +103,9 @@ footer.dark{
   color: var(--fontDark);
 }
 #logoFooter{
-  float: right;
+  text-align: center;
   margin-top: 1.2%;
   margin-right: 2px;
-}
-#textoFooter{
-  float: left;
-  margin-top: 0.7%;
-  margin-left: 2px;
 }
 /*footer*/
 /*login*/
