--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ table{
 
 /*navbar*/
 nav{
-  background-color: #0478d9;
+  background-image: linear-gradient(to bottom, #4e9ddd, #0478d9);
   color: white;
   font-size: 26px;
   font-size: 16px;
@@ -88,7 +88,7 @@ nav.dark{
 
 /*footer*/
 footer {
-  background-color: #0478d9;
+  background-image: linear-gradient(to bottom, #4e9ddd, #0478d9);
   color: white;
   height: 70px;
   text-align: center;
@@ -169,6 +169,7 @@ footer.dark{
   display: inline-block;
   font-size: 20px;
   padding: 5px;
+  border-radius: 10px;
 }
 .cardsHome td{
   color: white;
@@ -204,4 +205,22 @@ footer.dark{
   top: 50%;
   transform: translateY(-70%);
 }
+.cardsPolo.dark{
+  background: gray;
+  color: whitesmoke;
+}
 /*polos*/
+
+.inputPesquisa{
+  padding: 2rem;
+}
+.barraPesquisa{
+  background: white;
+}
+.barraPesquisa.dark{
+  background: black;
+}
+
+.barraPesquisa.dark:focus{
+  background: black;
+}
