--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,19 @@
     --fontDark: rgb(201, 201, 201);
     /*dark*/
 }
-
+/*scrollbar*/
+::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+}
+::-webkit-scrollbar-thumb {
+  background: rgb(173, 173, 173);
+  border-radius: 10px;
+}
+/*scrollbar*/
 /*dark*/
 table.dark{
   color: var(--fontDark) !important;
